<resources>
    <string name="app_name">SIPPKB</string>
    <string name="penjelasan">Penjelasan Metode Kontrasepsi Jangka Panjang (MJKP) dan Jangka Pendek (NON MJKP)</string>
    <string name="info_1">Sejalan dengan meningkatnya jumlah penduduk Indonesia dan kebutuhan akan kesehatan reproduksi untuk meningkatkan kesehatan ibu dan anak maka pemerintah mencanangkan program Keluarga Berencana (KB). Program KB merupakan program kegiatan promotif dan preventif yang terpadu, menyeluruh dan berkesinambungan. Pelayanan promotif dan preventif meliputi konseling dan penggunaan kontrasepsi Metode Kontrasepsi Jangka Panjang (MKJP) dan non Metode Kontrasepsi Jangka Panjang (non MKJP).</string>
    <string name="info_2">Metode kontrasepsi jangka panjang (MKJP) merupakan metode kontrasepsi dengan tingkat keefektifan yang tinggi dengan tingkat kegagalan yang rendah serta komplikasi dan efek samping yang lebih sedikit dibandingkan metode kontrasepsi yang lain. MKJP merupakan jenis kontrasepsi yang sekali pemakaiannya dapat bertahan selama 3 tahun sampai seumur hidup. Terdapat berbagai jenis MKJP seperti alat kontrasepsi dalam rahim (AKDR), implan, medis operatif wanita (MOP) dan medis operasi pria (MOP).</string>
    <string name="info_3">Sedangkan metode non MKJP salah satunya adalah suntik, angka kegagalan metode suntik saat ini masih cukup tinggi, yakni 6 per 100, yang artinya 6 dari 100 pengguna tetap mengalami ke­hamilan setelah mengguna­kan metode suntik. Jumlah peserta DO itu menyebabkan ter­jadinya kehamilan yang tidak diinginkan. Secara umum, sekitar 27% pemakai kontrasepsi non-MKJP berhenti memakai alat kontrasepsi setelah satu tahun pakai. Tingkat putus pakai alat kontrasepsi tertinggi ialah pil 41%, kondom 31%, dan suntik 25%. Kasus putus pakai itu menjadi salah satu faktor penyumbang kejadian kehamilan tidak diinginkan, aborsi, dan kematian ibu melahirkan di Indonesia. Karena itu, sudah saatnya peserta KB sekarang digiring untuk menjadi pengguna MKJP yang lebih efektif</string>
    <string name="jadwal">Jadwal Informasi Kegiatan UPTDP5A Kecamatan Mundu Kabupaten Cirebon</string>
</resources>