<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_35sdp"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_125sdp"
                                android:background="@color/grey_500"/>
                            <LinearLayout
                                android:padding="@dimen/_14sdp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <androidx.cardview.widget.CardView
                                    android:id="@+id/petunjuk"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    app:cardElevation="@dimen/_4sdp"
                                    app:cardMaxElevation="@dimen/_3sdp"
                                    app:cardCornerRadius="@dimen/_10sdp"
                                    android:layout_marginTop="@dimen/_30sdp"
                                    android:layout_marginBottom="@dimen/_8sdp"
                                    app:cardBackgroundColor="@color/blue_A400">
                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:paddingBottom="@dimen/_12sdp"
                                        android:paddingTop="@dimen/_40sdp"
                                        android:paddingLeft="@dimen/_10sdp"
                                        android:paddingRight="@dimen/_10sdp"
                                        android:gravity="center">
                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:textSize="@dimen/_18sdp"
                                            android:textColor="@color/white"
                                            android:textStyle="bold"
                                            android:layout_gravity="center"
                                            android:gravity="center"
                                            android:text="@string/penjelasan"/>
                                    </LinearLayout>
                                </androidx.cardview.widget.CardView>
                            </LinearLayout>
                            <LinearLayout
                                android:padding="@dimen/_14sdp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center">
                                <androidx.cardview.widget.CardView
                                    android:layout_width="@dimen/_70sdp"
                                    android:layout_height="@dimen/_70sdp"
                                    app:cardElevation="@dimen/_4sdp"
                                    app:cardMaxElevation="@dimen/_3sdp"
                                    app:cardCornerRadius="@dimen/_39sdp"
                                    android:background="@color/orange_400"
                                    app:cardBackgroundColor="@color/white">
                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:paddingBottom="@dimen/_12sdp"
                                        android:paddingTop="@dimen/_12sdp"
                                        android:paddingLeft="@dimen/_12sdp"
                                        android:paddingRight="@dimen/_12sdp"
                                        android:gravity="center">
                                        <ImageView
                                            android:layout_width="@dimen/_65sdp"
                                            android:layout_height="@dimen/_65sdp"
                                            android:background="@drawable/logo"/>
                                    </LinearLayout>
                                </androidx.cardview.widget.CardView>
                            </LinearLayout>

                        </RelativeLayout>

                    </LinearLayout>
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_12sdp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/_6sdp"
                        android:text="@string/info_1"
                        android:textSize="@dimen/_12sdp"
                        android:paddingLeft="@dimen/_6sdp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/_6sdp"
                        android:text="@string/info_2"
                        android:textSize="@dimen/_12sdp"
                        android:paddingLeft="@dimen/_6sdp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/_6sdp"
                        android:text="@string/info_3"
                        android:textSize="@dimen/_12sdp"
                        android:paddingLeft="@dimen/_6sdp"/>
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="@dimen/_10sdp"
                        app:cardBackgroundColor="@color/blue_A400"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:layout_marginBottom="@dimen/_3sdp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/_4sdp"
                            android:paddingTop="@dimen/_4sdp"
                            android:paddingLeft="@dimen/_6sdp"
                            android:paddingRight="@dimen/_6sdp"
                            >
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/_11sdp"
                                android:textColor="@color/white"
                                android:text="Baca juga :"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="@dimen/_4sdp"
                        app:cardBackgroundColor="@color/blue_A400"
                        android:layout_marginTop="@dimen/_3sdp">
                        <androidx.cardview.widget.CardView
                            android:id="@+id/informasi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:cardCornerRadius="@dimen/_4sdp"
                            android:layout_margin="@dimen/_1sdp">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:paddingBottom="@dimen/_4sdp"
                                android:paddingTop="@dimen/_4sdp"
                                android:paddingLeft="@dimen/_4sdp"
                                android:paddingRight="@dimen/_4sdp"
                                android:orientation="vertical">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="@dimen/_10sdp"
                                    android:textColor="@color/blue_A400"
                                    android:text="https://www.bkkbn.go.id/"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="@dimen/_10sdp"
                                    android:textColor="@color/orange_500"
                                    android:text="https://keluargaindonesia.id/"/>
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/blue_A400"
                    android:paddingBottom="@dimen/_35sdp"
                    android:layout_gravity="center">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">
                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:cardElevation="@dimen/_4sdp"
                            app:cardMaxElevation="@dimen/_3sdp"
                            app:cardCornerRadius="@dimen/_13sdp"
                            android:layout_marginTop="@dimen/_55sdp"
                            android:layout_marginBottom="@dimen/_8sdp"
                            app:cardBackgroundColor="@color/white">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:paddingBottom="@dimen/_12sdp"
                                android:paddingTop="@dimen/_40sdp"
                                android:paddingLeft="@dimen/_10sdp"
                                android:paddingRight="@dimen/_10sdp"
                                android:gravity="center">
                                <ImageView
                                    android:layout_marginBottom="@dimen/_8sdp"
                                    android:layout_width="@dimen/_290sdp"
                                    android:layout_height="@dimen/_180sdp"
                                    android:background="@drawable/jadwal"
                                    />
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                    <LinearLayout
                        android:padding="@dimen/_14sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">
                        <androidx.cardview.widget.CardView
                            android:layout_width="@dimen/_200sdp"
                            android:layout_height="wrap_content"
                            app:cardElevation="@dimen/_4sdp"
                            app:cardMaxElevation="@dimen/_3sdp"
                            app:cardCornerRadius="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:background="@color/orange_400"
                            app:cardBackgroundColor="@color/orange_500">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:paddingBottom="@dimen/_12sdp"
                                android:paddingTop="@dimen/_12sdp"
                                android:paddingLeft="@dimen/_12sdp"
                                android:paddingRight="@dimen/_12sdp"
                                android:gravity="center">
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="@dimen/_12sdp"
                                    android:textColor="@color/white"
                                    android:textStyle="bold"
                                    android:layout_gravity="center"
                                    android:gravity="center"
                                    android:text="@string/jadwal"/>
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
        <include layout="@layout/home_btn"/>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>